--- a/index.html
+++ b/index.html
@@ -691,10 +691,10 @@
                             </a>
                         </li>
                         <li>
-                            Albercas Del Mar:<br>
-                            <a target="_blank" href="https://albercasdelmar.com/">
+                            Icamar:<br>
+                            <a target="_blank" href="https://icamar.com/">
                                 <i class="fa fa-globe"></i>
-                                www.albercasdelmar.com
+                                www.icamar.com
                             </a>
                         </li>
                         <li>
