--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                     </h4>
                     <div 
                     class="fb-page" 
-                    data-href="https://www.facebook.com/Icamar.Mexico"
+                    data-href="https://www.facebook.com/AlbercasDelMarLC"
                     data-tabs="timeline" 
                     data-width=""
                     data-height="" 
@@ -602,8 +602,8 @@
                     data-adapt-container-width="true" 
                     data-hide-cover="false" 
                     data-show-facepile="true">
-                        <blockquote cite="https://www.facebook.com/Icamar.Mexico/" class="fb-xfbml-parse-ignore">
-                            <a href="https://www.facebook.com/Icamar.Mexico/">ICAMAR</a>
+                        <blockquote cite="https://www.facebook.com/AlbercasDelMarLC/" class="fb-xfbml-parse-ignore">
+                            <a href="https://www.facebook.com/AlbercasDelMarLC/">Albercas del mar</a>
                         </blockquote>
                     </div>
                     <h4 class="text-center text-uppercase">
