--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Albercas del mar</title>
+    <title>Inicio - Albercas del mar</title>
     <link rel="icon" type="image/png" href="img/logo/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="assets/bootstrap/bootstrap/dist/css/bootstrap.min.css">
@@ -39,128 +39,135 @@
     </script>
 </head>
 <body>
-    <header class="site-header inicio pt-0">
-        <div class="contenedor contenido-header d-none">
-            <div class="barra">
-                <a href="/">
-                    <img src="img/alb_logo.svg" alt="Logotipo de Bienes Raices">
-                </a>
-                <div class="mobile-menu">
-                    <a href="#navegacion">
-                        <img src="img/barras.svg" alt="Icono Menu">
+    <header class="site-header inicio">
+        <div class="col-12 col-md-6">
+            <div class="contenedor contenido-header d-none">
+                <div class="barra">
+                    <a href="/">
+                        <img src="img/alb_logo.svg" alt="Logotipo de Bienes Raices">
                     </a>
+                    <div class="mobile-menu">
+                        <a href="#navegacion">
+                            <img src="img/barras.svg" alt="Icono Menu">
+                        </a>
+                    </div>
+                    <nav id="navegacion" class="navegacion">
+                        <a href="nosotros.html">Nosotros</a>
+                        <a href="anuncios.html">Anuncios</a>
+                        <a href="blog.html">Galeria</a>
+                        <a href="contacto.html">Contacto</a>
+                    </nav>
                 </div>
-                <nav id="navegacion" class="navegacion">
-                    <a href="nosotros.html">Nosotros</a>
-                    <a href="anuncios.html">Anuncios</a>
-                    <a href="blog.html">Galeria</a>
-                    <a href="contacto.html">Contacto</a>
-                </nav>
+                <h1>Diseño y construcción de albercas</h1>
             </div>
-            <h1>Diseño y construcción de albercas</h1>
         </div>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light p-3 position-absolute box-shadow-principal">
-            <div class="container-fluid">
-                <div class="logo">
+        <div class="row mx-0">
+            <div class="col-12 col-md-6 p-0">
+                <div class="logo mx-auto">
                     <a href="index.html">
                         <img src="img/logo/logo_albercas_del_mar.png" alt="ALBERCAS DEL MAR LOGO">
                     </a>
                 </div>
-                <h1 
-                class="ml-5px texto-logo text-uppercase w-auto fw-800 b-b-3px-c-secundario">
+                <h4 class="ml-5px texto-logo text-uppercase w-auto fw-800 b-b-3px-c-secundario">
                     Diseño y construcción de albercas
-                </h1>
-                <button 
-                class="navbar-toggler" 
-                type="button" 
-                data-bs-toggle="collapse" 
-                data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" 
-                aria-expanded="false" 
-                aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse d-lg-flex justify-content-lg-end" id="navbarNavAltMarkup">
-                    <div id="navegacion-principal" class="navbar-nav text-uppercase">
-                        <a class="nav-link p-3 active" aria-current="page" href="index.html">Inicio</a>
-                        <a class="nav-link p-3" href="nosotros.html">¿Quiénes somos?</a>
-                        <a class="nav-link p-3" href="servicios.html">Servicios</a>
-                        <a class="nav-link p-3" href="galeria.html">Galería</a>
-                        <a class="nav-link p-3" href="contacto.html">Contacto</a>
-                    </div>
-                </div>
+                </h4>
             </div>
-        </nav>
-        <!-- Slider -->
-        <div 
-        id="carouselServicios" 
-        class="carousel slide" 
-        >
-            <div class="carousel-indicators">
-                <button 
-                class="active btnSliderCambioImagen"
-                type="button" 
-                data-bs-target="#carouselServicios" 
-                data-bs-slide-to="0" 
-                aria-current="true" 
-                aria-label="Imagen 1"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="img/alberca_dos.jpg" 
-                    class="d-block w-100">
-                    <div class="carousel-caption d-flex">
-                        <div class="p-r">
-                            <h1 class="text-white titulo-principal">ALBERCAS</h1>
-                            <h1 class="text-white mb-5 titulo-principal">DEL MAR</h1>
-                            <h3 
-                            class="text-uppercase text-center titulo-principal b-b-3px-c-principal w-auto text-white mb-5">
-                                DISEÑO Y CONSTRUCCIÓN DE ALBERCAS
-                            </h3>
-                        </div>
-                        <div class="container mt-5">
-                            <div class="row text-center mb-5 titulo-principal servicios-titulo text-white servicio-construccion">
-                                <p class="text-uppercase">
-                                    <span class="bineta"></span>
-                                    Diseño, Reparación, Mantenimiento y limpieza de albercas
-                                </p>
-                                <p class="text-uppercase">
-                                    <span class="bineta"></span>
-                                    Instalación de paneles, calentadores solares para agua tibia y cisternas
-                                </p>
-                                <p class="text-uppercase">
-                                    <span class="bineta"></span>
-                                    Instalación de equipo, colocación de veneciano, cuarto de máquinas, bombas y pozos de agua
-                                </p>
+            <div class="col-12 col-md-6 p-0">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light p-3 box-shadow-principal h-100">
+                    <div class="container-fluid">
+                        <button 
+                        class="navbar-toggler" 
+                        type="button" 
+                        data-bs-toggle="collapse" 
+                        data-bs-target="#navbarNavAltMarkup"
+                        aria-controls="navbarNavAltMarkup" 
+                        aria-expanded="false" 
+                        aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse d-lg-flex justify-content-lg-end" id="navbarNavAltMarkup">
+                            <div id="navegacion-principal" class="navbar-nav text-uppercase">
+                                <a class="nav-link p-3 active" aria-current="page" href="index.html">Inicio</a>
+                                <a class="nav-link p-3" href="nosotros.html">¿Quiénes somos?</a>
+                                <a class="nav-link p-3" href="servicios.html">Servicios</a>
+                                <a class="nav-link p-3" href="galeria.html">Galería</a>
+                                <a class="nav-link p-3" href="contacto.html">Contacto</a>
                             </div>
                         </div>
-                        <div class="subInformacion p-5">
-                            <button
-                            class="btn btn-success fondo-color-secundario">
-                                CONTACTANOS
-                            </button>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <!-- Slider -->
+    <div 
+    id="carouselServicios" 
+    class="carousel slide" 
+    >
+        <div class="carousel-indicators">
+            <button 
+            class="active btnSliderCambioImagen"
+            type="button" 
+            data-bs-target="#carouselServicios" 
+            data-bs-slide-to="0" 
+            aria-current="true" 
+            aria-label="Imagen 1"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="img/alberca_dos.jpg" 
+                class="d-block w-100">
+                <div class="carousel-caption d-flex">
+                    <div class="p-r">
+                        <h1 class="text-white titulo-principal">ALBERCAS</h1>
+                        <h1 class="text-white mb-5 titulo-principal">DEL MAR</h1>
+                        <h3 
+                        class="text-uppercase text-center titulo-principal b-b-3px-c-principal w-auto text-white mb-5">
+                            DISEÑO Y CONSTRUCCIÓN DE ALBERCAS
+                        </h3>
+                    </div>
+                    <div class="container mt-5">
+                        <div class="row text-center mb-5 titulo-principal servicios-titulo text-white servicio-construccion">
+                            <p class="text-uppercase">
+                                <span class="bineta"></span>
+                                Diseño, Reparación, Mantenimiento y limpieza de albercas
+                            </p>
+                            <p class="text-uppercase">
+                                <span class="bineta"></span>
+                                Instalación de paneles, calentadores solares para agua tibia y cisternas
+                            </p>
+                            <p class="text-uppercase">
+                                <span class="bineta"></span>
+                                Instalación de equipo, colocación de veneciano, cuarto de máquinas, bombas y pozos de agua
+                            </p>
                         </div>
+                    </div>
+                    <div class="subInformacion p-5">
+                        <button
+                        class="btn btn-success fondo-color-secundario">
+                            CONTACTANOS
+                        </button>
                     </div>
                 </div>
             </div>
-            <button 
-            class="carousel-control-prev" 
-            type="button" 
-            data-bs-target="#carouselServicios" 
-            data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button 
-            class="carousel-control-next" 
-            type="button" 
-            data-bs-target="#carouselServicios"
-            data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
-    </header>
+        <button 
+        class="carousel-control-prev" 
+        type="button" 
+        data-bs-target="#carouselServicios" 
+        data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button 
+        class="carousel-control-next" 
+        type="button" 
+        data-bs-target="#carouselServicios"
+        data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
     <section class="nuestro-servicio container"> 
         <article class="col-6 m-auto mb-5">
             <div class="contenedor-informacion text-center">
