--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <div class="collapse navbar-collapse d-lg-flex justify-content-lg-end" id="navbarNavAltMarkup">
+                        <div class="collapse navbar-collapse d-lg-flex justify-content-lg-end mx-auto" id="navbarNavAltMarkup">
                             <div id="navegacion-principal" class="navbar-nav text-uppercase">
                                 <a class="nav-link p-3 active" aria-current="page" href="index.html">Inicio</a>
                                 <a class="nav-link p-3" href="nosotros.html">¿Quiénes somos?</a>
@@ -121,8 +121,7 @@
                     <div class="p-r">
                         <h1 class="text-white titulo-principal">ALBERCAS</h1>
                         <h1 class="text-white mb-5 titulo-principal">DEL MAR</h1>
-                        <h3 
-                        class="text-uppercase text-center titulo-principal b-b-3px-c-principal w-auto text-white mb-5">
+                        <h3 class="d-none text-uppercase text-center titulo-principal b-b-3px-c-principal w-auto text-white mb-5">
                             DISEÑO Y CONSTRUCCIÓN DE ALBERCAS
                         </h3>
                     </div>
@@ -805,7 +804,7 @@
         </div>
         <p class="copyright fw-bold">
             <span class="d-block">©Todos los Derechos Reservados</span>
-            <span>ICAMAR <span class="anio-actual">---</span></span>
+            <span>Albercas del Mar<span class="anio-actual">---</span></span>
         </p>
     </footer>
     <!-- <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script> -->
