--- a/index.html
+++ b/index.html
@@ -142,10 +142,11 @@
                         </div>
                     </div>
                     <div class="subInformacion p-5">
-                        <button
-                        class="btn btn-success fondo-color-secundario">
-                            CONTACTANOS
-                        </button>
+                        <a 
+                        href="contacto.html" 
+                        class="btn btn-success fondo-color-secundario btn-contacto">
+                            Contactános
+                        </a>
                     </div>
                 </div>
             </div>
@@ -168,7 +169,7 @@
         </button>
     </div>
     <section class="nuestro-servicio container"> 
-        <article class="col-6 m-auto mb-5">
+        <article class="p-5 p-lg-0 col-12 col-lg-6 m-auto mb-5">
             <div class="contenedor-informacion text-center">
                 <img 
                 class="icono-informacion-seccion mt-4"
@@ -265,7 +266,11 @@
         <div class="contenedor contenido-contacto">
             <h2>Encuentra la alberca de tus sueños</h2>
             <p>Llena el formulario de contacto y un asesor se pondrá en contacto contigo a la brevedad</p>
-            <a href="contacto.html" class="boton boton-amarillo">Contactános</a>
+            <a 
+            href="contacto.html" 
+            class="btn btn-success fondo-color-secundario btn-contacto">
+                Contactános
+            </a>
         </div>
     </section>
     <h1 class="fw-300 text-center titulo-descriptivo mb-0">
