--- a/index.html
+++ b/index.html
@@ -305,7 +305,6 @@
     <section class="container">
         <div class="row">
             <section class="contenedor seccion seccion-contacto">
-                <h3 class="fw-bold text-center text-uppercase">Contáctanos</h3>
                 <p class="fw-bold color-t-principal">Dirección:</p>
                 <p>Nicolás Bravo 341, Centro, Cd. Lázaro Cárdenas, Mich., MX 60950</p>
                 <p class="fw-bold color-t-principal">Teléfonos:</p>
@@ -517,12 +516,12 @@
                     </div>
 					<div class="card mt-3">
 						<div class="card-header tituloCV text-white">
-							<h5 class="card-title mb-0 p-1">Enviar CV a:</h5>
+							<h4 class="card-title mb-0 p-1">Enviar CV a:</h4>
 						</div>
 						<div class="card-body correosCV">
                             <ul>
                                 <li>
-                                    <a href="tomail:info@icamar.com">info@icamar.com</a>
+                                    <a href="tomail:info@albercasdelmar.com">info@albercasdelmar.com</a>
                                 </li>
                                 <li>
                                     <a href="tomail:construccionlc@yahoo.com">construccionlc@yahoo.com</a>
@@ -540,9 +539,9 @@
 								<li>
 									<a 
 									class="fw-bold font-size-16px d-flex align-items-center" 
-									href="mailto:info@icamar.com">
+									href="mailto:info@albercasdelmar.com">
 										<i class="fa fa-envelope-o p-1"></i>
-										icamar
+										Albercas del Mar
 									</a>
 								</li>
 								<li>
