--- a/nosotros.html
+++ b/nosotros.html
@@ -368,7 +368,7 @@
 									class="fw-bold font-size-16px d-flex align-items-center" 
 									href="mailto:construccionlc@yahoo.com">
 										<i class="fa fa-envelope-o p-1"></i>
-										ingenierialzc
+										construccionlc
 									</a>
 								</li>
 							</div>
