--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                             <div id="navegacion-principal" class="navbar-nav text-uppercase">
                                 <a class="nav-link p-3 active" aria-current="page" href="index.html">Inicio</a>
                                 <a class="nav-link p-3" href="nosotros.html">¿Quiénes somos?</a>
-                                <a class="nav-link p-3" href="servicios.html">Servicios</a>
-                                <a class="nav-link p-3" href="galeria.html">Galería</a>
+                                <a class="nav-link p-3 d-none" href="servicios.html">Servicios</a>
+                                <a class="nav-link p-3 d-none" href="galeria.html">Galería</a>
                                 <a class="nav-link p-3" href="contacto.html">Contacto</a>
                             </div>
                         </div>
