--- a/nosotros.html
+++ b/nosotros.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <!-- Open Graph data -->
     <meta property="og:locale" content="en_US"/>
@@ -40,27 +40,6 @@
 </head>
 <body>
     <header class="site-header inicio">
-        <div class="col-12 col-md-6">
-            <div class="contenedor contenido-header d-none">
-                <div class="barra">
-                    <a href="/">
-                        <img src="img/alb_logo.svg" alt="Logotipo de Bienes Raices">
-                    </a>
-                    <div class="mobile-menu">
-                        <a href="#navegacion">
-                            <img src="img/barras.svg" alt="Icono Menu">
-                        </a>
-                    </div>
-                    <nav id="navegacion" class="navegacion">
-                        <a href="nosotros.html">Nosotros</a>
-                        <a href="anuncios.html">Anuncios</a>
-                        <a href="blog.html">Galeria</a>
-                        <a href="contacto.html">Contacto</a>
-                    </nav>
-                </div>
-                <h1>Diseño y construcción de albercas</h1>
-            </div>
-        </div>
         <div class="row mx-0">
             <div class="col-12 col-md-6 p-0">
                 <div class="logo mx-auto">
@@ -89,8 +68,8 @@
                             <div id="navegacion-principal" class="navbar-nav text-uppercase">
                                 <a class="nav-link p-3 active" aria-current="page" href="index.html">Inicio</a>
                                 <a class="nav-link p-3" href="nosotros.html">¿Quiénes somos?</a>
-                                <a class="nav-link p-3" href="servicios.html">Servicios</a>
-                                <a class="nav-link p-3" href="galeria.html">Galería</a>
+                                <a class="nav-link p-3 d-none" href="servicios.html">Servicios</a>
+                                <a class="nav-link p-3 d-none" href="galeria.html">Galería</a>
                                 <a class="nav-link p-3" href="contacto.html">Contacto</a>
                             </div>
                         </div>
@@ -131,8 +110,8 @@
             </div>
         </div>
     </main>
+    <h2 class="fw-300 text-center mb-0 titulo-descriptivo my-4">Más Sobre Nosotros</h2>
     <section class="contenedor seccion">
-        <h2 class="fw-300 centrar-texto">Más Sobre Nosotros</h2>
         <div class="iconos-nosotros">
             <div class="icono">
                 <img src="img/icono1.svg" alt="Icono Equipos">
@@ -156,7 +135,7 @@
             </div>
         </div>
     </section>
-        <footer class="site-footer">
+    <footer class="site-footer">
         <div class="container">
             <div class="row mb-3">
                 <div class="col-12">
