--- a/servicios.html
+++ b/servicios.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Inicio - Albercas del mar</title>
+    <title>Servicios - Albercas del mar</title>
     <link rel="icon" type="image/png" href="img/logo/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="assets/bootstrap/bootstrap/dist/css/bootstrap.min.css">
@@ -40,27 +40,6 @@
 </head>
 <body>
     <header class="site-header inicio">
-        <div class="col-12 col-md-6">
-            <div class="contenedor contenido-header d-none">
-                <div class="barra">
-                    <a href="/">
-                        <img src="img/alb_logo.svg" alt="Logotipo de Bienes Raices">
-                    </a>
-                    <div class="mobile-menu">
-                        <a href="#navegacion">
-                            <img src="img/barras.svg" alt="Icono Menu">
-                        </a>
-                    </div>
-                    <nav id="navegacion" class="navegacion">
-                        <a href="nosotros.html">Nosotros</a>
-                        <a href="anuncios.html">Anuncios</a>
-                        <a href="blog.html">Galeria</a>
-                        <a href="contacto.html">Contacto</a>
-                    </nav>
-                </div>
-                <h1>Diseño y construcción de albercas</h1>
-            </div>
-        </div>
         <div class="row mx-0">
             <div class="col-12 col-md-6 p-0">
                 <div class="logo mx-auto">
@@ -99,244 +78,61 @@
             </div>
         </div>
     </header>
-    <!-- Slider -->
-    <div 
-    id="carouselServicios" 
-    class="carousel slide" 
-    >
-        <div class="carousel-indicators">
-            <button 
-            class="active btnSliderCambioImagen"
-            type="button" 
-            data-bs-target="#carouselServicios" 
-            data-bs-slide-to="0" 
-            aria-current="true" 
-            aria-label="Imagen 1"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="img/alberca_dos.jpg" 
-                class="d-block w-100">
-                <div class="carousel-caption d-flex">
-                    <div class="p-r">
-                        <h1 class="text-white titulo-principal">ALBERCAS</h1>
-                        <h1 class="text-white mb-5 titulo-principal">DEL MAR</h1>
-                        <h3 class="d-none text-uppercase text-center titulo-principal b-b-3px-c-principal w-auto text-white mb-5">
-                            DISEÑO Y CONSTRUCCIÓN DE ALBERCAS
-                        </h3>
-                    </div>
-                    <div class="container mt-5">
-                        <div class="row text-center mb-5 servicios-titulo text-white servicio-construccion">
-                            <p class="text-uppercase">
-                                <span class="bineta"></span>
-                                Diseño, Reparación, Mantenimiento y limpieza de albercas
-                            </p>
-                            <p class="text-uppercase">
-                                <span class="bineta"></span>
-                                Instalación de paneles, calentadores solares para agua tibia y cisternas
-                            </p>
-                            <p class="text-uppercase">
-                                <span class="bineta"></span>
-                                Instalación de equipo, colocación de veneciano, cuarto de máquinas, bombas y pozos de agua
-                            </p>
-                        </div>
-                    </div>
-                    <div class="subInformacion p-5">
-                        <a 
-                        href="contacto.html" 
-                        class="btn btn-success fondo-color-secundario btn-contacto">
-                            Contactános
-                        </a>
-                    </div>
-                </div>
+    <section class="informacion-principal-nosotros">
+        <article class="imagen-fondo row mx-0 p-r">
+            <div class="sombra-seccion"></div>
+            <div class="text-white col-6 mx-auto my-auto titulo-seccion z-index-10 fondo-seccion">
+                <span class="bineta mx-auto w-auto"></span>
+                Apoyamos desde el diseño de su proyecto con la elaboración de planos arquitectónicos, estructurales, eléctrico e
+                hidrosanitarios, estudios del área para futura construcción e instalación de equipo. Permisos para construir su alberca
+                y la viabilidad de su proyecto.
             </div>
-        </div>
-        <button 
-        class="carousel-control-prev" 
-        type="button" 
-        data-bs-target="#carouselServicios" 
-        data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button 
-        class="carousel-control-next" 
-        type="button" 
-        data-bs-target="#carouselServicios"
-        data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-    <section class="nuestro-servicio container"> 
-        <article class="p-5 p-lg-0 col-12 col-lg-6 m-auto mb-5">
-            <div class="contenedor-informacion text-center">
-                <img 
-                class="icono-informacion-seccion mt-4"
-                src="img/iconos/information-button.png" 
-                alt="Icono servicios">
-                <h1 class="text-center b-b-3px-c-secundario fst-italic m-0">
-                    Nuestro servicio:
-                </h1>
-            </div>
-            <p>
-                Diseño, reparación, mantenimiento y limpieza de albercas, desde lo residencial hasta lo comercial, incluido instalación
-                de equipo, colocación de veneciano, cuarto de máquinas, bombas, pozos de agua, instalación de techos/maya sombra,
-                instalación de paneles y calentadores solares para agua tibia, y cisternas.
-            </p>
         </article>
     </section>
-    <h2 class="fw-300 text-center mb-0 titulo-descriptivo mb-4">Diseño de Albercas a tu Medida</h2>
-    <section class="contenedor seccion mt-0">
-        <div class="grid" style="background-color:aliceblue">
-            <div class="columnas-6">
-                <img src="img/blog1.jpg" alt="Imagen Nosotros">
+    <h2 class="fw-300 text-center mb-0 titulo-descriptivo mt-4 mb-4">Conoce Sobre Nosotros</h2>
+    <main class="contenedor">
+        <div class="contenido-nosotros">
+            <div class="imagen">
+                <img src="img/alberca.png" alt="Imagen Sobre Nosotros">
             </div>
-            <div class="columnas-6">
-                <h3 class="subtitulos">
-                    <i class="fa fa-hand-o-right" aria-hidden="true"></i>
-                    ¿Buscas una piscina?
-                </h3>
-                <p style="text-align: justify;">
-                    Te ayudamos a que tu sueño se haga realidad. En albercas del mar te
-                    asesoramos para que encuentres la alberca que siempre deseaste. Nuestros asesores especializados,
-                    te ofrecerán los mejores y mas modernos equipos a nivel mundial, contamos con mas de 30 años de
-                    experiencia.
-                </p>
-            </div>
-        </div>
-    </section>
-    <section class="contenedor seccion" style="background-color: azure;">
-        <div class="grid">
-            <div class="columnas-6">
-                <h3 class="subtitulos">
-                    <i class="fa fa-hand-o-right" aria-hidden="true"></i>
-                    Los mejores equipos para albercas en una piscina de ensueño
-                </h3>
-                <p style="text-align: justify;">
-                    Imagina que llegas a casa después de un día largo y lleno de
-                    actividades, ¿a poco no te gustaría tener tu propio oasis y darte un momento de relajación?
-                </p>
-                <p style="text-align: justify;">
-                    Si tu respuesta fue “sí”, ¡hazlo posible con la familia de Albercas del
-                    mar!
-                </p>
-                <p style="text-align: justify;">
-                    Podemos ayudarte a construirlo con los mejores acabados, accesorios y
-                    equipos para albercas.
-                </p>
-            </div>
-            <div class="columnas-6">
-                <img src="img/blog2.jpg" alt="Imagen Nosotros">
+            <div class="texto-nosotros">
+                <blockquote>30 Años de Experiencia</blockquote>
+                <h2>Misión</h2>
+                <p>Bien y a la primera, garantizado nuestro trabajo, con la calidad que nos distingue, apoyándonos en
+                    nuestra experiencia de más de 30 años en el mercado laboral, teniendo como referencia nuestros
+                    trabajos realizados a las distintas empresas y organizaciones , tanto públicas como privadas.</p>
+
+                <h2>Visión</h2>
+                <p>Ser siempre de las primeras empresas especializadas en Sistemas de Acondicionado, manteniendo
+                    nuestros estándares de calidad a la vanguardia, yendo de la mano con el avance tecnológico en todos
+                    nuestros proyectos y mantenernos en constante crecimiento ingresando a nuevos mercados, incluso
+                    internacionales.</p>
             </div>
         </div>
-    </section>
-    <h2 class="fw-300 text-center titulo-descriptivo mb-0">
-        Más Sobre Nosotros
-    </h2>
-    <section class="contenedor seccion my-0 mb-5">
+    </main>
+    <h2 class="fw-300 text-center mb-0 titulo-descriptivo my-4">Más Sobre Nosotros</h2>
+    <section class="contenedor seccion">
         <div class="iconos-nosotros">
             <div class="icono">
                 <img src="img/icono1.svg" alt="Icono Equipos">
-                <h3 class="subtitulos">Equipos</h3>
-                <p>
-                    Una alberca que funciona sin problemas es una alberca que trabaja con los mejores equipos y que son
-                    los adecuados para sus necesidades.
-                </p>
+                <h3>Equipos</h3>
+                <p>Una alberca que funciona sin problemas es una alberca que trabaja con los mejores equipos y que son
+                    los adecuados para sus necesidades .</p>
             </div>
+
             <div class="icono">
                 <img src="img/icono2.svg" alt="Icono Construcción">
-                <h3 class="subtitulos">Construcción</h3>
-                <p>
-                    Tener en cuenta factores como los materiales, la superficie, las dimensiones, los equipos y los
-                    accesorios es parte escencial para un proyecto exitoso.
-                </p>
+                <h3>Construcción</h3>
+                <p>Tener en cuenta factores como los materiales, la superficie, las dimensiones, los equipos y los
+                    accesorios es parte escencial para un proyecto exitoso.</p>
             </div>
+
             <div class="icono">
                 <img src="img/icono3.svg" alt="Icono Vanguardia">
-                <h3 class="subtitulos">Vanguardia</h3>
-                <p>
-                    Soluciones tecnológicas y productos de última generación que responden a la demanda de tranquilidad,
-                    comodidad, ahorro y mejor funcionamiento.
-                </p>
+                <h3>Vanguardia</h3>
+                <p>Soluciones tecnológicas y productos de última generación que responden a la demanda de tranquilidad,
+                    comodidad, ahorro y mejor funcionamiento.</p>
             </div>
-        </div>
-    </section>
-    <!-- Servicios -->
-    <h1 class="titulo-descriptivo">Construcción, mantenimiento y cambios de:</h1>
-    <section class="imagen-contacto">
-        <div class="contenedor contenido-contacto">
-            <h2>Encuentra la alberca de tus sueños</h2>
-            <p>Llena el formulario de contacto y un asesor se pondrá en contacto contigo a la brevedad</p>
-            <a 
-            href="contacto.html" 
-            class="btn btn-success fondo-color-secundario btn-contacto">
-                Contactános
-            </a>
-        </div>
-    </section>
-    <h1 class="fw-300 text-center titulo-descriptivo mb-0">
-        <b>Contáctanos</b>
-    </h1>
-    <section class="container-fluid">
-        <div class="row">
-            <div class="col-12 p-0">
-                <iframe 
-                class="w-100"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3795.471885459347!2d-102.196537185107!3d17.956769690859733!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84315de95005187b%3A0xfc3a76c03dfdcb0e!2sNicolas%20Bravo%20341%20Centro!5e0!3m2!1ses!2smx!4v1652822012953!5m2!1ses!2smx" 
-                height="450" 
-                style="border:0;" 
-                allowfullscreen="" 
-                loading="lazy" 
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-        </div>
-        <div class="ultimos-tweets">
-            <div 
-            class="fb-page" 
-            data-href="https://www.facebook.com/AlbercasDelMarLC/" data-tabs="timeline"
-            data-width="" data-height="" data-small-header="false" data-adapt-container-width="true"
-            data-hide-cover="false" data-show-facepile="true">
-                <blockquote 
-                cite="https://www.facebook.com/AlbercasDelMarLC/" 
-                class="fb-xfbml-parse-ignore"><a
-                href="https://www.facebook.com/AlbercasDelMarLC/">Albercas Del Mar</a></blockquote>
-            </div>
-        </div>
-    </section>
-    <section class="container">
-        <div class="row">
-            <section class="contenedor seccion seccion-contacto">
-                <p class="fw-bold color-t-principal">Dirección:</p>
-                <p>Nicolás Bravo 341, Centro, Cd. Lázaro Cárdenas, Mich., MX 60950</p>
-                <p class="fw-bold color-t-principal">Teléfonos:</p>
-                <ul class="text-center p-0">
-                    <li>
-                        <a href="tel:+52 (753) 537 1349">
-                            &nbsp;<i class="fa fa-phone"></i>&nbsp;&nbsp;+52 (753) 537 1349
-                        </a>
-                    </li>
-                    <li>
-                        <a href="tel:+52 (753) 181 1195">
-                            &nbsp;<i class="fa fa-phone"></i>&nbsp;&nbsp;+52 (753) 181 1195
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://wa.me/7531683407" target="_blank">
-                            &nbsp;<i class="fa fa-whatsapp"></i>&nbsp;+52 (753) 168 3407
-                        </a>
-                    </li>
-                </ul>
-                <p class="fw-bold color-t-principal">Correos:</p>
-                <ul class="text-center p-0">
-                    <li>
-                        <a href="mailto:info@albercasdelmar.com">info@albercasdelmar.com</a><br>
-                    </li>
-                    <li>
-                        <a href="mailto:construccionhl@yahoo.com">construccionhl@yahoo.com</a>
-                    </li>
-                </ul>
-            </section>
         </div>
     </section>
     <footer class="site-footer">
